# coach-agents

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
.omc/: project-memory.json
.omc/sessions/: 438a6d36-65c4-5896-90b7-ba71258aacb7.json
agents/english-coach/: SOUL.md  agent.yaml
agents/playwright-coach/: .agentignore  HEARTBEAT.md  SOUL.md  USER.md  agent.yaml
brains/: __init__.py  _base.py  advise_mode.py
brains/antigravity/: README.md  __init__.py
brains/claude_code/: README.md  __init__.py  adapter.py  claude_md_builder.py  session.py
brains/codex/: README.md  __init__.py
channels/: __init__.py  _base.py
channels/cli/: README.md  __init__.py  adapter.py
channels/discord/: README.md  __init__.py
coach_agents/: __init__.py
coach_cli/: README.md  __init__.py  __main__.py  learn_core.py  publish_gist.py
docs/: architecture.md  brain-interface.md  channel-interface.md  eval-plan.md  knowledge-management.md  new-agent-walkthrough.md  observability-plan.md  permissions.md  phase-2-roadmap.md  scheduling.md  security.md  skill-authoring.md
observability/: __init__.py  trace.py
runtime/: __init__.py  __main__.py  cron_loader.py  env.py  loader.py  onboarding.py  permissions.py  queue.py  router.py  scheduler.py
schemas/: agent.schema.json  skill.schema.json
template/: HEARTBEAT.md  SOUL.md  USER.md  agent.yaml
tests/: test_claude_adapter.py  test_cli.py  test_cron_reload.py  test_e2e_stub.py  test_heartbeat_ops_scripts.py  test_learn_dry_run.py  test_loader.py
(+58 files in other folders)
